googlesql/analyzer/testdata/ai_functions.test
# AI.IF function tests.
[language_features=MAXIMUM]
# AI.IF is disabled by default under a language feature marked with
# in_development=true, due to naming conflicts with other engines that have their
# own version of AI.IF.
SELECT product
FROM
    KeyValue
WHERE
    AI.IF(CONCAT("Is this product environmentally friendly? Product:", product));
--
ERROR: Function not found: AI.`IF`; Chained function calls require parentheses on input paths; Did you mean (AI).`IF`(...)? [at 8:5]
    AI.IF(CONCAT("Is this product environmentally friendly? Product:", produc...
    ^
==

[language_features=NONE]
# Different error message if the feature gating chained function calls is not
# enabled and AI.IF is still disabled.
SELECT Value
FROM
    KeyValue
WHERE
    AI.IF(CONCAT("Is this product environmentally friendly? Product:", product));
--
ERROR: Function not found: AI.`IF` [at 7:5]
    AI.IF(CONCAT("Is this product environmentally friendly? Product:", produc...
    ^
==

[language_features=NONE,+AI_IF,+JSON_TYPE]
# Error if named arguments are not enabled.
SELECT product
FROM
    KeyValue
WHERE
    AI.IF(CONCAT("Is this product environmentally friendly? Product:", Value),
    model => "gemini");
--
ERROR: Named arguments are not supported [at 7:5]
    model => "gemini");
    ^
==

[language_features=NONE,+AI_IF,+NAMED_ARGUMENTS]
# Error if JSON_TYPE is not enabled.
SELECT product
FROM
    KeyValue
WHERE
    AI.IF(CONCAT("Is this product environmentally friendly? Product:", Value),
    JSON '{"product_description":"This product is made from recyclable materials."}',
    model => "gemini");
--
ERROR: JSON literals are not supported [at 7:5]
    JSON '{"product_description":"This product is made from recyclable materi...
    ^
==

# The following tests run with AI.IF, JSON_TYPE, and NAMED_ARGUMENTS enabled.
[default language_features=NONE,+AI_IF,+JSON_TYPE,+NAMED_ARGUMENTS]
# Basic test that a ResolvedAST is produced with all arguments specified.
SELECT *
FROM
    KeyValue
WHERE
    AI.IF("Is this product with the following description considered environmentally friendly or sustainable?",
    JSON '{"product_description":"This product is made from recyclable materials."}',
    model => "gemini",
    options => JSON '{"option1": "value1"}');
--
QueryStmt
+-output_column_list=
| +-KeyValue.Key#1 AS Key [INT64]
| +-KeyValue.Value#2 AS Value [STRING]
+-query=
  +-ProjectScan
    +-column_list=KeyValue.[Key#1, Value#2]
    +-input_scan=
      +-FilterScan
        +-column_list=KeyValue.[Key#1, Value#2]
        +-input_scan=
        | +-TableScan(column_list=KeyValue.[Key#1, Value#2], table=KeyValue, column_index_list=[0, 1])
        +-filter_expr=
          +-FunctionCall(GoogleSQL:ai.if(STRING prompt, JSON payload, STRING model, JSON options) -> BOOL)
            +-Literal(type=STRING, value="Is this product with the following description considered environmentally friendly or sustainable?")
            +-Literal(type=JSON, value={"product_description":"This product is made from recyclable materials."}, has_explicit_type=TRUE)
            +-Literal(type=STRING, value="gemini")
            +-Literal(type=JSON, value={"option1":"value1"}, has_explicit_type=TRUE)
==

# `prompt` can be a STRUCT and `payload` shouldn't be specified.
SELECT *
FROM
    KeyValue
WHERE
    AI.IF(STRUCT("Is this product environmentally friendly?" as prompt, "this product is known to contain toxic components" AS product_description, "lead" AS product_material),
    model => "gemini", options => JSON '{}');
--
QueryStmt
+-output_column_list=
| +-KeyValue.Key#1 AS Key [INT64]
| +-KeyValue.Value#2 AS Value [STRING]
+-query=
  +-ProjectScan
    +-column_list=KeyValue.[Key#1, Value#2]
    +-input_scan=
      +-FilterScan
        +-column_list=KeyValue.[Key#1, Value#2]
        +-input_scan=
        | +-TableScan(column_list=KeyValue.[Key#1, Value#2], table=KeyValue, column_index_list=[0, 1])
        +-filter_expr=
          +-FunctionCall(GoogleSQL:ai.if(STRUCT<prompt STRING, product_description STRING, product_material STRING> prompt, STRING model, JSON options) -> BOOL)
            +-Literal(type=STRUCT<prompt STRING, product_description STRING, product_material STRING>, value={prompt:"Is this product environmentally friendly?", product_description:"this product is known to contain toxic components", product_material:"lead"})
            +-Literal(type=STRING, value="gemini")
            +-Literal(type=JSON, value={}, has_explicit_type=TRUE)
==

# `options` can be a STRING but formatted as JSON if engines don't support JSON
# as a native type.
SELECT *
FROM
    KeyValue
WHERE
    AI.IF(prompt => "Is this product environmentally friendly?", options => "{\"option1\": \"value1\"}");
--
QueryStmt
+-output_column_list=
| +-KeyValue.Key#1 AS Key [INT64]
| +-KeyValue.Value#2 AS Value [STRING]
+-query=
  +-ProjectScan
    +-column_list=KeyValue.[Key#1, Value#2]
    +-input_scan=
      +-FilterScan
        +-column_list=KeyValue.[Key#1, Value#2]
        +-input_scan=
        | +-TableScan(column_list=KeyValue.[Key#1, Value#2], table=KeyValue, column_index_list=[0, 1])
        +-filter_expr=
          +-FunctionCall(GoogleSQL:ai.if(STRING prompt, STRING options) -> BOOL)
            +-Literal(type=STRING, value="Is this product environmentally friendly?")
            +-Literal(type=STRING, value='{"option1": "value1"}')
==

# Real column names can be referenced within calls to AI.IF.
SELECT Value
FROM
    KeyValue
WHERE
    AI.IF(CONCAT("Does Value equal to c?: ", Value), "payload", model => "gemini")
--
QueryStmt
+-output_column_list=
| +-KeyValue.Value#2 AS Value [STRING]
+-query=
  +-ProjectScan
    +-column_list=[KeyValue.Value#2]
    +-input_scan=
      +-FilterScan
        +-column_list=[KeyValue.Value#2]
        +-input_scan=
        | +-TableScan(column_list=[KeyValue.Value#2], table=KeyValue, column_index_list=[1])
        +-filter_expr=
          +-FunctionCall(GoogleSQL:ai.if(STRING prompt, STRING payload, STRING model) -> BOOL)
            +-FunctionCall(GoogleSQL:concat(STRING, repeated(1) STRING) -> STRING)
            | +-Literal(type=STRING, value="Does Value equal to c?: ")
            | +-ColumnRef(type=STRING, column=KeyValue.Value#2)
            +-Literal(type=STRING, value="payload")
            +-Literal(type=STRING, value="gemini")
==

# At least `prompt` must be passed in as an argument.
SELECT Value
FROM
    KeyValue
WHERE
    AI.IF(prompt => CONCAT("Does Value equal to c?: ", Value));
--
QueryStmt
+-output_column_list=
| +-KeyValue.Value#2 AS Value [STRING]
+-query=
  +-ProjectScan
    +-column_list=[KeyValue.Value#2]
    +-input_scan=
      +-FilterScan
        +-column_list=[KeyValue.Value#2]
        +-input_scan=
        | +-TableScan(column_list=[KeyValue.Value#2], table=KeyValue, column_index_list=[1])
        +-filter_expr=
          +-FunctionCall(GoogleSQL:ai.if(STRING prompt) -> BOOL)
            +-FunctionCall(GoogleSQL:concat(STRING, repeated(1) STRING) -> STRING)
              +-Literal(type=STRING, value="Does Value equal to c?: ")
              +-ColumnRef(type=STRING, column=KeyValue.Value#2)
==

# `options` can be passed as a STRUCT.
SELECT Value
FROM KeyValue
WHERE AI.IF(CONCAT("Does Value equal to c?: ", Value), options =>
STRUCT('param_value' AS model_param_1));
--
QueryStmt
+-output_column_list=
| +-KeyValue.Value#2 AS Value [STRING]
+-query=
  +-ProjectScan
    +-column_list=[KeyValue.Value#2]
    +-input_scan=
      +-FilterScan
        +-column_list=[KeyValue.Value#2]
        +-input_scan=
        | +-TableScan(column_list=[KeyValue.Value#2], table=KeyValue, column_index_list=[1])
        +-filter_expr=
          +-FunctionCall(GoogleSQL:ai.if(STRING prompt, STRUCT<model_param_1 STRING> options) -> BOOL)
            +-FunctionCall(GoogleSQL:concat(STRING, repeated(1) STRING) -> STRING)
            | +-Literal(type=STRING, value="Does Value equal to c?: ")
            | +-ColumnRef(type=STRING, column=KeyValue.Value#2)
            +-Literal(type=STRUCT<model_param_1 STRING>, value={model_param_1:"param_value"})
==

# `options` and `model` can be called in an order opposite to what's defined in
# the signature.
SELECT Value
FROM KeyValue
WHERE AI.IF(CONCAT("Does Value equal to c?: ", Value), options =>
STRUCT('param_value' AS model_param_1), model => "gemini");
--
QueryStmt
+-output_column_list=
| +-KeyValue.Value#2 AS Value [STRING]
+-query=
  +-ProjectScan
    +-column_list=[KeyValue.Value#2]
    +-input_scan=
      +-FilterScan
        +-column_list=[KeyValue.Value#2]
        +-input_scan=
        | +-TableScan(column_list=[KeyValue.Value#2], table=KeyValue, column_index_list=[1])
        +-filter_expr=
          +-FunctionCall(GoogleSQL:ai.if(STRING prompt, STRING model, STRUCT<model_param_1 STRING> options) -> BOOL)
            +-FunctionCall(GoogleSQL:concat(STRING, repeated(1) STRING) -> STRING)
            | +-Literal(type=STRING, value="Does Value equal to c?: ")
            | +-ColumnRef(type=STRING, column=KeyValue.Value#2)
            +-Literal(type=STRING, value="gemini")
            +-Literal(type=STRUCT<model_param_1 STRING>, value={model_param_1:"param_value"})
==

# NULL passed in won't cause analysis errors but should be handled by the
# reference and engine implementations.
SELECT *
FROM
    KeyValue
WHERE
    AI.IF(NULL);
--
QueryStmt
+-output_column_list=
| +-KeyValue.Key#1 AS Key [INT64]
| +-KeyValue.Value#2 AS Value [STRING]
+-query=
  +-ProjectScan
    +-column_list=KeyValue.[Key#1, Value#2]
    +-input_scan=
      +-FilterScan
        +-column_list=KeyValue.[Key#1, Value#2]
        +-input_scan=
        | +-TableScan(column_list=KeyValue.[Key#1, Value#2], table=KeyValue, column_index_list=[0, 1])
        +-filter_expr=
          +-FunctionCall(GoogleSQL:ai.if(STRING prompt) -> BOOL)
            +-Literal(type=STRING, value=NULL)
==

# Error if `prompt` is not provided.
SELECT *
FROM
    KeyValue
WHERE
    AI.IF(model => "gemini", options => JSON '{}');
--
ERROR: No matching signature for function AI.IF
  Argument types: model => STRING, options => JSON
  Signature: AI.IF([prompt=>]STRING, [payload=>]T1, model => STRING, options => JSON)
    Signature requires at least 4 arguments, found 2 arguments
  Signature: AI.IF([prompt=>]STRING, [payload=>]T1, model => STRING, options => STRUCT)
    Signature requires at least 4 arguments, found 2 arguments
  Signature: AI.IF([prompt=>]STRING, [payload=>]T1, model => STRING, options => STRING)
    Signature requires at least 4 arguments, found 2 arguments
  Signature: AI.IF([prompt=>]STRING, model => STRING, options => JSON)
    Signature requires at least 3 arguments, found 2 arguments
  Signature: AI.IF([prompt=>]STRING, model => STRING, options => STRUCT)
    Signature requires at least 3 arguments, found 2 arguments
  Signature: AI.IF([prompt=>]STRING, model => STRING, options => STRING)
    Signature requires at least 3 arguments, found 2 arguments
  Signature: AI.IF([prompt=>]STRING, [payload=>]T1, options => JSON)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRING, [payload=>]T1, options => STRUCT)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRING, [payload=>]T1, options => STRING)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRING, options => JSON)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRING, options => STRUCT)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRING, options => STRING)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRING, [payload=>]T1, model => STRING)
    Named argument `options` does not exist in signature
  Signature: AI.IF([prompt=>]STRING, model => STRING)
    Named argument `options` does not exist in signature
  Signature: AI.IF([prompt=>]STRING, [payload=>]T1)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRING)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRUCT, model => STRING, options => JSON)
    Signature requires at least 3 arguments, found 2 arguments
  Signature: AI.IF([prompt=>]STRUCT, model => STRING, options => STRUCT)
    Signature requires at least 3 arguments, found 2 arguments
  Signature: AI.IF([prompt=>]STRUCT, model => STRING, options => STRING)
    Signature requires at least 3 arguments, found 2 arguments
  Signature: AI.IF([prompt=>]STRUCT, options => JSON)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRUCT, options => STRUCT)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRUCT, options => STRING)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRUCT, model => STRING)
    Named argument `options` does not exist in signature
  Signature: AI.IF([prompt=>]STRUCT)
    Named argument `model` does not exist in signature [at 5:5]
    AI.IF(model => "gemini", options => JSON '{}');
    ^
==

# Error if `prompt` is a STRUCT and `payload` is provided.
SELECT *
FROM
    KeyValue
WHERE
    AI.IF(STRUCT("Is this product environmentally friendly?" as prompt, "this product is known to contain toxic components" AS product_description, "lead" AS product_material),
        "This product is made from recyclable materials.",
    model => "gemini", options => "option1");
--
ERROR: No matching signature for function AI.IF
  Argument types: STRUCT<prompt STRING, product_description STRING, product_material STRING>, STRING, model => STRING, options => STRING
  Signature: AI.IF([prompt=>]STRING, [payload=>]T1, model => STRING, options => JSON)
    Argument 1: Unable to coerce type STRUCT<prompt STRING, product_description STRING, product_material STRING> to expected type STRING
  Signature: AI.IF([prompt=>]STRING, [payload=>]T1, model => STRING, options => STRUCT)
    Argument 1: Unable to coerce type STRUCT<prompt STRING, product_description STRING, product_material STRING> to expected type STRING
  Signature: AI.IF([prompt=>]STRING, [payload=>]T1, model => STRING, options => STRING)
    Argument 1: Unable to coerce type STRUCT<prompt STRING, product_description STRING, product_material STRING> to expected type STRING
  Signature: AI.IF([prompt=>]STRING, model => STRING, options => JSON)
    Signature accepts at most 3 arguments, found 4 arguments
  Signature: AI.IF([prompt=>]STRING, model => STRING, options => STRUCT)
    Signature accepts at most 3 arguments, found 4 arguments
  Signature: AI.IF([prompt=>]STRING, model => STRING, options => STRING)
    Signature accepts at most 3 arguments, found 4 arguments
  Signature: AI.IF([prompt=>]STRING, [payload=>]T1, options => JSON)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRING, [payload=>]T1, options => STRUCT)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRING, [payload=>]T1, options => STRING)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRING, options => JSON)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRING, options => STRUCT)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRING, options => STRING)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRING, [payload=>]T1, model => STRING)
    Named argument `options` does not exist in signature
  Signature: AI.IF([prompt=>]STRING, model => STRING)
    Named argument `options` does not exist in signature
  Signature: AI.IF([prompt=>]STRING, [payload=>]T1)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRING)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRUCT, model => STRING, options => JSON)
    Signature accepts at most 3 arguments, found 4 arguments
  Signature: AI.IF([prompt=>]STRUCT, model => STRING, options => STRUCT)
    Signature accepts at most 3 arguments, found 4 arguments
  Signature: AI.IF([prompt=>]STRUCT, model => STRING, options => STRING)
    Signature accepts at most 3 arguments, found 4 arguments
  Signature: AI.IF([prompt=>]STRUCT, options => JSON)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRUCT, options => STRUCT)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRUCT, options => STRING)
    Named argument `model` does not exist in signature
  Signature: AI.IF([prompt=>]STRUCT, model => STRING)
    Named argument `options` does not exist in signature
  Signature: AI.IF([prompt=>]STRUCT)
    Named argument `model` does not exist in signature [at 5:5]
    AI.IF(STRUCT("Is this product environmentally friendly?" as prompt, "this...
    ^
==

# Error if `model` is a positional argument.
SELECT *
FROM
    KeyValue
WHERE AI.IF("prompt", "payload", "model");
--
ERROR: No matching signature for function AI.IF
  Argument types: STRING, STRING, STRING
  Signature: AI.IF(STRING, T1, model => STRING, options => JSON)
    Signature requires at least 4 arguments, found 3 arguments
  Signature: AI.IF(STRING, T1, model => STRING, options => STRUCT)
    Signature requires at least 4 arguments, found 3 arguments
  Signature: AI.IF(STRING, T1, model => STRING, options => STRING)
    Signature requires at least 4 arguments, found 3 arguments
  Signature: AI.IF(STRING, model => STRING, options => JSON)
    Positional argument at 2 is invalid because argument `model` can only be referred to by name
  Signature: AI.IF(STRING, model => STRING, options => STRUCT)
    Positional argument at 2 is invalid because argument `model` can only be referred to by name
  Signature: AI.IF(STRING, model => STRING, options => STRING)
    Positional argument at 2 is invalid because argument `model` can only be referred to by name
  Signature: AI.IF(STRING, T1, options => JSON)
    Positional argument at 3 is invalid because argument `options` can only be referred to by name
  Signature: AI.IF(STRING, T1, options => STRUCT)
    Positional argument at 3 is invalid because argument `options` can only be referred to by name
  Signature: AI.IF(STRING, T1, options => STRING)
    Positional argument at 3 is invalid because argument `options` can only be referred to by name
  Signature: AI.IF(STRING, options => JSON)
    Signature accepts at most 2 arguments, found 3 arguments
  Signature: AI.IF(STRING, options => STRUCT)
    Signature accepts at most 2 arguments, found 3 arguments
  Signature: AI.IF(STRING, options => STRING)
    Signature accepts at most 2 arguments, found 3 arguments
  Signature: AI.IF(STRING, T1, model => STRING)
    Positional argument at 3 is invalid because argument `model` can only be referred to by name
  Signature: AI.IF(STRING, model => STRING)
    Signature accepts at most 2 arguments, found 3 arguments
  Signature: AI.IF(STRING, T1)
    Signature accepts at most 2 arguments, found 3 arguments
  Signature: AI.IF(STRING)
    Signature accepts at most 1 argument, found 3 arguments
  Signature: AI.IF(STRUCT, model => STRING, options => JSON)
    Positional argument at 2 is invalid because argument `model` can only be referred to by name
  Signature: AI.IF(STRUCT, model => STRING, options => STRUCT)
    Positional argument at 2 is invalid because argument `model` can only be referred to by name
  Signature: AI.IF(STRUCT, model => STRING, options => STRING)
    Positional argument at 2 is invalid because argument `model` can only be referred to by name
  Signature: AI.IF(STRUCT, options => JSON)
    Signature accepts at most 2 arguments, found 3 arguments
  Signature: AI.IF(STRUCT, options => STRUCT)
    Signature accepts at most 2 arguments, found 3 arguments
  Signature: AI.IF(STRUCT, options => STRING)
    Signature accepts at most 2 arguments, found 3 arguments
  Signature: AI.IF(STRUCT, model => STRING)
    Signature accepts at most 2 arguments, found 3 arguments
  Signature: AI.IF(STRUCT)
    Signature accepts at most 1 argument, found 3 arguments [at 4:7]
WHERE AI.IF("prompt", "payload", "model");
      ^
==

# Error if no arguments are provided.
SELECT *
FROM
    KeyValue
WHERE
    AI.IF();
--
ERROR: No matching signature for function AI.IF with no arguments
  Signature: AI.IF(STRING, T1, model => STRING, options => JSON)
    Signature requires at least 4 arguments, found 0 arguments
  Signature: AI.IF(STRING, T1, model => STRING, options => STRUCT)
    Signature requires at least 4 arguments, found 0 arguments
  Signature: AI.IF(STRING, T1, model => STRING, options => STRING)
    Signature requires at least 4 arguments, found 0 arguments
  Signature: AI.IF(STRING, model => STRING, options => JSON)
    Signature requires at least 3 arguments, found 0 arguments
  Signature: AI.IF(STRING, model => STRING, options => STRUCT)
    Signature requires at least 3 arguments, found 0 arguments
  Signature: AI.IF(STRING, model => STRING, options => STRING)
    Signature requires at least 3 arguments, found 0 arguments
  Signature: AI.IF(STRING, T1, options => JSON)
    Signature requires at least 3 arguments, found 0 arguments
  Signature: AI.IF(STRING, T1, options => STRUCT)
    Signature requires at least 3 arguments, found 0 arguments
  Signature: AI.IF(STRING, T1, options => STRING)
    Signature requires at least 3 arguments, found 0 arguments
  Signature: AI.IF(STRING, options => JSON)
    Signature requires at least 2 arguments, found 0 arguments
  Signature: AI.IF(STRING, options => STRUCT)
    Signature requires at least 2 arguments, found 0 arguments
  Signature: AI.IF(STRING, options => STRING)
    Signature requires at least 2 arguments, found 0 arguments
  Signature: AI.IF(STRING, T1, model => STRING)
    Signature requires at least 3 arguments, found 0 arguments
  Signature: AI.IF(STRING, model => STRING)
    Signature requires at least 2 arguments, found 0 arguments
  Signature: AI.IF(STRING, T1)
    Signature requires at least 2 arguments, found 0 arguments
  Signature: AI.IF(STRING)
    Signature requires at least 1 argument, found 0 arguments
  Signature: AI.IF(STRUCT, model => STRING, options => JSON)
    Signature requires at least 3 arguments, found 0 arguments
  Signature: AI.IF(STRUCT, model => STRING, options => STRUCT)
    Signature requires at least 3 arguments, found 0 arguments
  Signature: AI.IF(STRUCT, model => STRING, options => STRING)
    Signature requires at least 3 arguments, found 0 arguments
  Signature: AI.IF(STRUCT, options => JSON)
    Signature requires at least 2 arguments, found 0 arguments
  Signature: AI.IF(STRUCT, options => STRUCT)
    Signature requires at least 2 arguments, found 0 arguments
  Signature: AI.IF(STRUCT, options => STRING)
    Signature requires at least 2 arguments, found 0 arguments
  Signature: AI.IF(STRUCT, model => STRING)
    Signature requires at least 2 arguments, found 0 arguments
  Signature: AI.IF(STRUCT)
    Signature requires at least 1 argument, found 0 arguments [at 5:5]
    AI.IF();
    ^
==

# Disallow more than one anonymous data payload field with explicit STRUCT(...)
# constructor.
SELECT
AI.IF(
STRUCT("payload1" AS field1, "data_payload_1", "data_payload_2"),
model => "gemini",
options => "option1");
--
ERROR: More than one anonymous data payload field is not allowed [at 2:1]
AI.IF(
^
==

# No error occurs since only the second field and onward is counted as data
# payload fields.
SELECT
AI.IF(STRUCT("prompt", "data_payload_1"), model => "gemini", options => "option1");
--
QueryStmt
+-output_column_list=
| +-$query.$col1#1 AS `$col1` [BOOL]
+-query=
  +-ProjectScan
    +-column_list=[$query.$col1#1]
    +-expr_list=
    | +-$col1#1 :=
    |   +-FunctionCall(GoogleSQL:ai.if(STRUCT<STRING, STRING> prompt, STRING model, STRING options) -> BOOL)
    |     +-Literal(type=STRUCT<STRING, STRING>, value={"prompt", "data_payload_1"})
    |     +-Literal(type=STRING, value="gemini")
    |     +-Literal(type=STRING, value="option1")
    +-input_scan=
      +-SingleRowScan
==

# No errors since the data payload field names are inferred because they are a
# defined column from an existing table.
SELECT Value
FROM KeyValue
WHERE
AI.IF(STRUCT("payload1", Value, Value), model => "gemini", options => "option1");
--
QueryStmt
+-output_column_list=
| +-KeyValue.Value#2 AS Value [STRING]
+-query=
  +-ProjectScan
    +-column_list=[KeyValue.Value#2]
    +-input_scan=
      +-FilterScan
        +-column_list=[KeyValue.Value#2]
        +-input_scan=
        | +-TableScan(column_list=[KeyValue.Value#2], table=KeyValue, column_index_list=[1])
        +-filter_expr=
          +-FunctionCall(GoogleSQL:ai.if(STRUCT<STRING, Value STRING, Value STRING> prompt, STRING model, STRING options) -> BOOL)
            +-MakeStruct
            | +-type=STRUCT<STRING, Value STRING, Value STRING>
            | +-field_list=
            |   +-Literal(type=STRING, value="payload1")
            |   +-ColumnRef(type=STRING, column=KeyValue.Value#2)
            |   +-ColumnRef(type=STRING, column=KeyValue.Value#2)
            +-Literal(type=STRING, value="gemini")
            +-Literal(type=STRING, value="option1")
==

# Disallow more than one anonymous data payload field with implicit STRUCT.
SELECT
AI.IF(("prompt", "data_payload_1", "data_payload_2"), model => "gemini", options => "option1");
--
ERROR: More than one anonymous data payload field is not allowed [at 2:1]
AI.IF(("prompt", "data_payload_1", "data_payload_2"), model => "gemini", opti...
^
==

# No error still since only the second field and onward is counted as data
# payload fields.
SELECT
AI.IF(("prompt", "data_payload_1"), model => "gemini", options => "option1");
--
QueryStmt
+-output_column_list=
| +-$query.$col1#1 AS `$col1` [BOOL]
+-query=
  +-ProjectScan
    +-column_list=[$query.$col1#1]
    +-expr_list=
    | +-$col1#1 :=
    |   +-FunctionCall(GoogleSQL:ai.if(STRUCT<STRING, STRING> prompt, STRING model, STRING options) -> BOOL)
    |     +-Literal(type=STRUCT<STRING, STRING>, value={"prompt", "data_payload_1"})
    |     +-Literal(type=STRING, value="gemini")
    |     +-Literal(type=STRING, value="option1")
    +-input_scan=
      +-SingleRowScan

==

# Error since data payload field names can't be inferred with this type of
# STRUCT constructor.
SELECT Value
FROM KeyValue
WHERE
AI.IF(("prompt", Value, Value), model => "gemini", options => "option1");
--
ERROR: More than one anonymous data payload field is not allowed [at 4:1]
AI.IF(("prompt", Value, Value), model => "gemini", options => "option1");
^
==

# `model` must be query-const
SELECT AI.IF("prompt", model => "gemini" || CAST(rand() AS STRING));
--
ERROR: Argument 'model' to AI.IF must be a query-level constant [at 1:24]
SELECT AI.IF("prompt", model => "gemini" || CAST(rand() AS STRING));
                       ^
==

# `options` must be query-const
SELECT AI.IF("prompt", options => "option1" || CAST(rand() AS STRING));
--
ERROR: Argument 'options' to AI.IF must be a query-level constant [at 1:24]
SELECT AI.IF("prompt", options => "option1" || CAST(rand() AS STRING));
                       ^
